app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */
* {
    margin: 0;
}
body {
    background-color: #FAf9f9;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.hidden {
    display: none;
}

.notice-container {
    height: 8px;
    margin-left: 16px;
    display: flex;
    color: green;
    font-size: medium;
    font-style: italic;
}

.profile-header {
    display: flex;
    align-items: center;
    background-color: #555B6E;
    color:#FAf9f9;
    gap: 24px;
    padding: 8px;
}

a {
    text-decoration: none;
    color: #FAf9f9;
    font-size: large;
}

 .alert {
    color: red;
 }

.navbar {
    display: grid;
    grid-template-columns: repeat( auto-fit, minmax(120px, 1fr) );;
    height: 3rem;
    background-color: #555B6E;
    height: 10vh;
    justify-items: center;
    align-items: center;
    padding: 1vh;
}
 .nav-links, .login-links {
    padding-left: 3rem;
 }

 .login-links {
    justify-content: end;
    padding-right: 3rem;
 }

/* Below for post styling */
.page-wrapper,
 .post-wrapper,
 .user-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 16px;
    gap: 16px
 }

 .post-display {
    display: grid;
    gap: 8px;
    /* The below CSS is for auto-arranging multiple posts */
    /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
 }

 .post-page h2 {
    background-color: #FAf9f9;
    padding: 15px;
 }

.post,
.new-post,
.user {
    display: flex;
    flex-direction: column;
    background-color: #6f7c80;
    padding: 8px;
}

.new-post {
    width: 50vw;
    min-width: 500px;
}

.post a {
    color: #FFD6BA
}

.post p, 
.post a {
    margin: 8px;
}

.title {
    font-size: 2rem;
    font-weight: 700;
}

.author {
    font-size: 1.5rem;
    font-weight: 700;
}

.post-body, 
.likes {
    font-size: 1.2rem;
}

.likes-button button,
.post-btn,
.user .follow-btn {
    background-color: #DAD8C9;
    border: 1px solid #555B6E;
    font-size: 1rem;
    padding: 8px 16px;
    border-radius: 5px;
}

/* Below for post Show styling */
.comments-section,
.comment-wrapper {
    display: flex;
    flex-direction: column;
    gap: 16px;
    background-color: #6f7c80;
    padding: 8px 16px;
    border-radius: 10px;
}

.displayed-comment,
.new-comment {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.form-title,
.bio-title,
.post-title {
    font-size: 1.3rem;
    font-weight: 500;
}

.login-wrapper,
.user-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #FAf9f9;
    margin: 14px 0;
}

.form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #6f7c80;
    width: 50vw;
    max-width: 500px;
    gap: 8px;
    border-radius: 5px;
    padding: 16px 0;
}

.form-new-post {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.post-title p,
#post_title {
    font-size: large;
}

.oauth-buttons {
    display: flex;
    justify-content: space-around;
    width: 50%
}
.oauth-buttons .button_to {
    width: 75px;
    height: 125px;
}
.hint {
    font-size: smaller;
}
.post-btn {
    background-color: #555B6E;
    color: #FAf9f9;
}
.new-post {
    padding: 16px;
    gap: 16px;
}

/* Users index below */
.user {
    /* flex-direction: row; */
    align-items: space-around;
    justify-content: center;
    width: 75vw;
    min-width: 300px;
    /* height: 10vh; */
}

.user-display,
.invitation,
.inv-btn {
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.invitation {
    justify-content: space-evenly;
    /* gap: 120px; */
}

.inv-btn .accept {
    background-color: #98b464;
}
.inv-btn .decline {
    background-color: #d67229;
}

/* Users show page */

.user-page {
    gap: 8px;
    justify-content: center;
}
.avatar {
    width: 25vw;
    height: 25vw;
    background-color: #98b464;
}

.user-page .post {
    width: 80vw;
}

.bio-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80vw;
}
.edit-link  a {
    color: #555B6E;
}

 /* Code to target alignment for smartphone devices */

@media screen and (max-width: 767px) {
  .post-wrapper,
  .new-post,
  .user-wrapper,
  .form
   {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .form {
    min-width: 280px;
  }

  .avatar-field p {
    margin-left: 80px;
  }
}


 /* End code for targeting smartphone devices */

